--- a/css/modal.css
+++ b/css/modal.css
@@ -68,6 +68,7 @@ img {
     background-color: #ff0000;
     color: #ffffff;
     border-radius: 15px;
+    text-decoration: underline;
 }
 
 .topnav .icon {
@@ -97,17 +98,6 @@ img {
         float: none;
         display: block;
         text-align: left;
-    }
-}
-
-@media screen and (max-width: 540px) {
-    .topnav a {
-        display: none;
-    }
-    .topnav a.icon {
-        float: right;
-        display: block;
-        margin-top: -15px;
     }
 }
 
@@ -594,5 +584,57 @@ footer {
     }
     to {
         opacity: 1;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .topnav a {
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+        margin-top: -15px;
+    }
+    /*logo sizing*/
+    #logoM {
+        max-width: 50%;
+    }
+    .fa-bars {
+        color: #fe142f;
+    }
+    .hero-headline {
+        font-size: 2.5rem !important;
+    }
+    .hero-content {
+        min-width: unset !important;
+        max-width: 100%;
+        padding: 0px !important;
+    }
+    .hero-text {
+        width: unset !important;
+        font-size: 0.75rem !important;
+        margin-top: 10px !important;
+    }
+    .copyrights {
+        margin: 10px 0px 10px 0px !important;
+    }
+    .hero-section>.btn-signup {
+        margin: 10px auto 0px !important;
+        font-size: 1rem;
+    }
+    .hero-section {
+        min-height: unset !important;
+    }
+    .content {
+        margin: 15% auto;
+    }
+    .content label {
+        font-size: 15px;
+        display: initial;
+    }
+    .checkbox-label,
+    .checkbox2-label {
+        font-size: 12px !important;
     }
 }
