--- a/css/modal.css
+++ b/css/modal.css
@@ -75,6 +75,12 @@ img {
     display: none;
 }
 
+.error {
+    color: #ff0000;
+    font-size: 10px;
+    margin-top: 5px;
+}
+
 @media screen and (max-width: 768px) {
     .topnav a {
         display: none;
