--- a/css/modal.css
+++ b/css/modal.css
@@ -180,10 +180,22 @@ main {
     z-index: 1;
     left: 0;
     top: 0;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     overflow: auto;
     background-color: rgba(26, 39, 156, 0.4);
+}
+
+#success-content {
+    min-height: 500px;
+}
+
+#success-text {
+    min-height: 350px;
+    text-align: center;
+    max-width: 100%;
+    padding-top: 20%;
+    font-size: 2rem;
 }
 
 .content {
@@ -642,5 +654,15 @@ footer {
     .checkbox-label,
     .checkbox2-label {
         font-size: 12px !important;
+    }
+    #success-text {
+        min-height: 350px;
+        text-align: center;
+        max-width: 100%;
+        padding-top: 35%;
+        font-size: 2rem !important;
+    }
+    #submit-success {
+        margin-top: 15%;
     }
 }
